--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^7.1.0"
+    "concurrently": "^7.1.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "@heroicons/react": "^1.0.6"
   }
 }
