added the cart component to home.js page and added a helpers file to the utils directory

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6"
+    "@heroicons/react": "^1.0.6",
+    "@stripe/stripe-js": "^1.29.0",
+    "stripe": "^8.222.0"
   }
 }
