--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.0.24"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6"
+    "@heroicons/react": "^1.0.6",
+    "stripe": "^8.221.0"
   }
 }
