--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@stripe/stripe-js": "^1.29.0",
+    "flowbite": "^1.4.5",
     "stripe": "^8.222.0"
   }
 }
