--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
-    "stripe": "^8.220.0"
+    "stripe": "^8.220.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
